# ca-rules

./: Cargo.toml  README.md  README_en.md
.github/workflows/: test.yml
src/: error.rs  hex.rs  isotropic.rs  lib.rs  lifelike.rs  macros.rs  parse_rules.rs  parser.rs  traits.rs  util.rs
src/neighborhood/: hex.rs  isohex.rs  isotropic.rs  lifelike.rs  mod.rs  neumann.rs
src/new_rules/: hex.rs  hex_gen.rs  life.rs  life_gen.rs  mod.rs  nt_von.rs  von.rs  von_gen.rs
src/rules/: hex.rs  life.rs  mod.rs  neumann.rs  nthex.rs  ntlife.rs  ntneumann.rs
src/traits/: map.rs  mod.rs  parse.rs  print.rs  total.rs
