[package]
name = "ca-rules"
version = "0.3.3"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2018"
description = "Parsing rule strings of life-like cellular automata."
homepage = "https://github.com/AlephAlpha/ca-rules"
repository = "https://github.com/AlephAlpha/ca-rules"
license = "MIT"
readme = "README_en.md"
keywords = ["game-of-life", "cellular-automata", "parser"]

[dependencies]
base64 = "0.13.0"
displaydoc = "0.2.2"
thiserror = "1.0.26"
