[package]
name = "ca-rules"
version = "0.3.5"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2021"
description = "Parsing rule strings of life-like cellular automata."
homepage = "https://github.com/AlephAlpha/ca-rules"
repository = "https://github.com/AlephAlpha/ca-rules"
license = "MIT"
readme = "README_en.md"
keywords = ["game-of-life", "cellular-automata", "parser"]

[dependencies]
base64 = "0.22.0"
displaydoc = "0.2.3"
thiserror = "1.0.39"
